Made hidden articles not show up in the article list for unregistered users

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ DATABASE_LOCAL=mongodb://localhost:27017/eksamen
 JWT_SECRET=super_secret
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRE_TIME=7
+ADMIN_PASSWORD=super_secret_admin_password
