--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,15 @@
   },
   "dependencies": {
     "argon2": "^0.27.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
-    "slugify": "^1.4.5",
-    "cookie-parser": "^1.4.5",
-    "csurf": "^1.11.0"
+    "nodemailer": "^6.4.16",
+    "slugify": "^1.4.5"
   }
 }
