--- a/server/.env
+++ b/server/.env
@@ -5,14 +5,12 @@ DATABASE_LOCAL=mongodb://localhost:27017/eksamen
 JWT_SECRET=super_secret
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRE_TIME=7
-<<<<<<< HEAD
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
-EMAIL_USER=7f78397aef42ef
+EMAIL_USER=7f78397aef42ef<
 EMAIL_PASSWORD=48839cb2e8bc8b
 EMAIL_COMPANY_NOREPLY=noreply@lgror.no
 EMAIL_COMPANY=lg@lgror.no
 EMAIL_COMPANY_NAME=lgror
-=======
+EMAIL_Admin=admin@lgror.no
 ADMIN_PASSWORD=super_secret_admin_password
->>>>>>> frontpage
