Controller now takes care of sending out a copy of confirmation email sent to user

--- a/server/.env
+++ b/server/.env
@@ -12,5 +12,5 @@ EMAIL_PASSWORD=48839cb2e8bc8b
 EMAIL_COMPANY_NOREPLY=noreply@lgror.no
 EMAIL_COMPANY=lg@lgror.no
 EMAIL_COMPANY_NAME=lgror
-EMAIL_Admin=admin@lgror.no
+EMAIL_ADMIN=admin@lgror.no
 ADMIN_PASSWORD=super_secret_admin_password
