--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon --exec babel-node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -29,6 +31,7 @@
     "morgan": "^1.10.0",
     "slugify": "^1.4.5",
     "cookie-parser": "^1.4.5",
-    "csurf": "^1.11.0"
+    "csurf": "^1.11.0",
+    "multer": "^1.4.2"
   }
 }
