--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,7 @@ JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRE_TIME=7
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
-EMAIL_USER=7f78397aef42ef<
+EMAIL_USER=7f78397aef42ef
 EMAIL_PASSWORD=48839cb2e8bc8b
 EMAIL_COMPANY_NOREPLY=noreply@lgror.no
 EMAIL_COMPANY=lg@lgror.no
