--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +20,16 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "jest": "^26.4.2",
+    "@types/jest": "^26.0.14",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-jest": "^26.3.0",
+    "cross-env": "^7.0.2",
+    "supertest": "^5.0.0"
   },
   "dependencies": {
     "argon2": "^0.27.0",
@@ -30,6 +42,8 @@
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.16",
-    "slugify": "^1.4.5"
+    "slugify": "^1.4.5",
+    "uuid": "^8.3.1",
+    "body-parser": "^1.19.0"
   }
 }
